Fix overflow on page causing bottom content to disappear

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  background-color: #ffffff;
+  background-color: darkgray;
   flex-grow: 1;
 }
 
@@ -18,13 +18,22 @@
     padding: 0 20px;
   }
 }
+
+.page {
+  display: flex;
+  flex: 1;
+  overflow: hidden;
+}
+
 .content {
   flex-grow: 1;
-  padding: 10px;
-  margin: 0 auto;
+  margin: 10px 10%;
 }
+
 .footer {
-  background-color: red;
-  padding: 100px;
+  background-color: #333;
+  padding: 10px 0 50px 0;
   text-align: center;
+  font-size: 150%;
+  color: white;
 }
